# gradio_image_annotator_v2

./: .dockerignore  .gitignore  LICENSE  README.md  package.json  pyproject.toml
backend/gradio_image_annotation_v2/: image_annotator.py
backend/gradio_image_annotation_v2/templates/component/: index.js  style.css
demo/: app.py  space.py
frontend/: Index.svelte  biome.json  package-lock.json  package.json  vite.config.ts
frontend/shared/: AnnotatedImageData.ts  Box.ts  Canvas.svelte  ImageAnnotator.svelte  ImageCanvas.svelte  ModalBox.svelte  Point.ts
frontend/shared/icons/: Clear.svelte  Point.svelte  index.ts
