[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_image_annotation_v2"
version = "0.2.1"
description = "A Gradio component that can be used to annotate images with bounding boxes and point."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "yama-is-bocchi" }]
keywords = [
  "gradio-custom-component",
  "gradio-template-Image",
  "bounding box",
  "annotator",
  "annotate",
  "boxes",
]
# Add dependencies here
dependencies = ["gradio>=4.29,<6.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = [
  "/backend/gradio_image_annotation_v2/templates",
  "*.pyi",
  "backend/gradio_image_annotation_v2/templates",
  "backend/gradio_image_annotation_v2/templates",
  "backend/gradio_image_annotation_v2/templates",
  "backend/gradio_image_annotation_v2/templates",
  "backend/gradio_image_annotation_v2/templates",
  "backend/gradio_image_annotation_v2/templates",
  "backend/gradio_image_annotation_v2/templates",
  "backend/gradio_image_annotation_v2/templates",
  "backend/gradio_image_annotation_v2/templates",
  "backend/gradio_image_annotation_v2/templates",
  "backend/gradio_image_annotation_v2/templates",
  "backend/gradio_image_annotation_v2/templates",
  "backend/gradio_image_annotation_v2/templates",
  "/\\backend\\gradio_image_annotation_v2\\templates",
]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_image_annotation_v2"]

[project.urls]
Homepage = "https://github.com/yama-is-bocchi/gradio_image_annotator_v2"
Repository = "https://github.com/yama-is-bocchi/gradio_image_annotator_v2"
